# gameone

./: .gitignore  README.md  package.json  tsconfig.json
program/: README.md
program/hexone/: Anchor.toml  package.json
program/hexone/programs/hexone/: Cargo.toml
program/hexone/programs/hexone/src/: constants.rs  error.rs  events.rs  lib.rs
program/hexone/programs/hexone/src/instructions/: add_resources.rs  attack_tile.rs  claim_prize.rs  create_game.rs  create_platform.rs  create_player.rs  join_game.rs  mod.rs  move_resources.rs  resolve_attack.rs
program/hexone/programs/hexone/src/state/: defender.rs  game.rs  mod.rs  platform.rs  player.rs
program/hexone/tests/: hexone.ts
public/: index.html
src/: App.tsx  index.css
src/components/: Game.tsx
web/: README.md  config-overrides.js  package.json  webpack.config.js
web/src/: App.css  App.tsx  index.css
web/src/components/: Game.tsx  RpcSettingsPopup.tsx
web/src/components/game/: AttackPopup.tsx  Game.tsx  HexTile.ts  MainScene.ts  UI.tsx  constants.ts  types.ts
web/src/contexts/: NetworkContext.tsx
web/src/idl/: hexone.json  hexone.ts
web/src/lib/: hexone.ts
web/src/pages/: Game.tsx  Games.tsx
web/src/types/: project-serum__anchor.d.ts
web/src/util/: bytes.ts
