[package]
name = "hexone"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hexone"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
num-derive = "0.3"
num-traits = "0.2"
bytemuck = "1.4.0"
arrayref = "0.3.6"
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
